# waldur-cli

./: .gitlab-ci.yml  Cargo.toml  README.md  dist-workspace.toml
docs/: 1-getting-started.md  2-querying-resources.md  3-managing-resources.md  4-provisioning-openstack.md  5-recipes-and-tips.md  6-troubleshooting.md
src/: cli.rs  config.rs  filter.rs  http.rs  main.rs  order.rs  output.rs  pagination.rs  progress.rs  query.rs  request.rs  schema.rs
src/commands/: mod.rs
src/commands/marketplace/: mod.rs  offering.rs  resource.rs
src/commands/openstack/: floating_ip.rs  instance.rs  mod.rs  network.rs  security_group.rs  subnet.rs  tenant.rs  volume.rs
src/commands/team/: customer.rs  customer_permissions_review.rs  mod.rs  organization_group.rs  project.rs  project_permissions_review.rs  role.rs  user.rs  user_invitation.rs  user_permission_request.rs
